refactor(auth): token cookie-only architecture with slug-based tenant resolution
## Summary
Refactored authentication to use cookie-only token storage (HttpOnly, Secure, SameSite=Lax)
with slug-based tenant identification, following enterprise security best practices.

## Changes

### Token Management
- Created TokenPair DTO to hold accessToken/refreshToken separately from AuthResponse
- Tokens are now set via cookies ONLY - never exposed in JSON response body
- Updated AuthResponse factory methods to remove token parameters

### Slug-Based Authentication
- All login/forgot-password/reset-password flows now use tenantSlug instead of numeric tenantId
- Created SlugCacheService for Redis-cached slug → tenantId resolution
- Created SlugGeneratorService for slug generation/validation

### Service Layer Cookie Handling
- AuthService handles cookie setting for tenant login/refresh (injected CookieUtils)
- SignupService handles cookie setting for signup
- SuperAdminAuthService handles cookie setting for admin auth (NEW: injected CookieUtils)
  - Added adminLogin(), adminRefresh(), adminLogout() methods

### Controller Cleanup
- AuthController: removed cookie handling - delegated to AuthService
- AdminAuthController: removed CookieUtils field, uses SuperAdminAuthService methods

### Files Created
- TokenPair.java - DTO for token pair

### Files Modified
- AuthResponse.java - removed token params from factory methods
- TenantAuthService.java - TokenPair parameter pattern
- AuthService.java - TokenPair pattern + cookie handling
- SignupService.java - TokenPair pattern + cookie handling
- SuperAdminAuthService.java - added CookieUtils + admin* methods
- AdminAuthController.java - simplified, uses service methods
- CookieUtils.java - added clearAdminAuthCookies()

### Security
- HttpOnly cookies prevent XSS token theft
- Secure flag for production
- SameSite=Lax prevents CSRF on navigation
- Token rotation on refresh/logout